--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas id="arena"></canvas>
+  <div id="title-screen">
+    <h1>Rock 🪨 vs. Paper 📄 vs. Scissors ✂️</h1>
+    <p>Three emojis enter, but only one can win!</p>
+    <button id="start-btn">Start Game</button>
+  </div>
+
+  <canvas id="arena" style="display: none;"></canvas>
+
+  <div id="controls">
+    <h3>Customizations</h3>
+    <label for="map-shape">Map Shape:</label>
+    <select id="map-shape">
+      <option value="circle">Circle</option>
+      <option value="triangle">Triangle</option>
+      <option value="hexagon">Hexagon</option>
+      <option value="octagon">Octagon</option>
+    </select>
+
+    <label for="emoji-speed">Speed:</label>
+    <input type="range" id="emoji-speed" min="1" max="10" value="5">
+
+    <label for="emoji-count">Number of Emojis:</label>
+    <input type="number" id="emoji-count" min="1" max="20" value="3">
+
+    <button id="spawn-random">Spawn Random-Size Emoji</button>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
