--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div id="title-screen">
-    <h1>Rock 🪨 vs. Paper 📄 vs. Scissors ✂️</h1>
-    <p>Three emojis enter, but only one can win!</p>
+    <h1>Emoji Battle Arena</h1>
+    <p>Choose your map and settings to begin!</p>
     <button id="start-btn">Start Game</button>
   </div>
 
@@ -17,24 +17,31 @@
 
   <div id="controls" style="display: none;">
     <h3>Customizations</h3>
-    <label for="map-shape">Map Shape:</label>
-    <select id="map-shape">
-      <option value="circle">Circle</option>
-      <option value="triangle">Triangle</option>
-      <option value="hexagon">Hexagon</option>
-      <option value="octagon">Octagon</option>
-    </select>
+    <div class="control-group">
+      <label for="map-shape">Map Shape:</label>
+      <select id="map-shape">
+        <option value="circle">Circle</option>
+        <option value="square">Square</option>
+        <option value="hexagon">Hexagon</option>
+        <option value="octagon">Octagon</option>
+      </select>
+    </div>
 
-    <label for="emoji-speed">Speed:</label>
-    <input type="range" id="emoji-speed" min="1" max="10" value="5">
+    <div class="control-group">
+      <label for="emoji-speed">Emoji Speed:</label>
+      <input type="range" id="emoji-speed" min="1" max="10" value="5">
+    </div>
 
-    <label for="emoji-count">Number of Emojis:</label>
-    <input type="number" id="emoji-count" min="1" max="20" value="3">
+    <div class="control-group">
+      <label for="emoji-count">Number of Emojis:</label>
+      <input type="number" id="emoji-count" min="1" max="20" value="3">
+    </div>
 
-    <button id="spawn-random">Spawn Random-Size Emoji</button>
+    <button id="spawn-random">Spawn Random Emoji</button>
   </div>
 
   <script>
+    // HTML Interactivity Logic
     const titleScreen = document.getElementById('title-screen');
     const startButton = document.getElementById('start-btn');
     const canvas = document.getElementById('arena');
@@ -44,6 +51,7 @@
       titleScreen.style.display = 'none';
       canvas.style.display = 'block';
       controls.style.display = 'flex';
+      initializeGame();
     });
   </script>
 
