--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emoji Battle Arena</title>
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,21 +40,6 @@
 
     <button id="spawn-random">Spawn Random Emoji</button>
   </div>
-
-  <script>
-    // HTML Interactivity Logic
-    const titleScreen = document.getElementById('title-screen');
-    const startButton = document.getElementById('start-btn');
-    const canvas = document.getElementById('arena');
-    const controls = document.getElementById('controls');
-
-    startButton.addEventListener('click', () => {
-      titleScreen.style.display = 'none';
-      canvas.style.display = 'block';
-      controls.style.display = 'flex';
-      initializeGame();
-    });
-  </script>
 
   <script src="script.js"></script>
 </body>
