--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- HTML (index.html) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,12 +8,12 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <!-- Title Screen -->
-  <div id="title-screen">
-    <canvas id="menu-background"></canvas>
-    <div class="content">
+  <!-- Neon Menu -->
+  <div id="menu">
+    <canvas id="menu-bg"></canvas>
+    <div class="menu-content">
       <h1>Emoji Battle Arena</h1>
-      <p>Welcome to the chillest battle arena. Choose your settings to begin!</p>
+      <p>The chillest battle arena with a neon twist!</p>
       <button id="start-btn">Start Game</button>
     </div>
   </div>
@@ -22,30 +21,21 @@
   <!-- Game Arena -->
   <canvas id="arena" style="display: none;"></canvas>
 
-  <!-- Controls -->
+  <!-- Game Controls -->
   <div id="controls" style="display: none;">
-    <canvas id="control-background"></canvas>
-    <div class="content">
-      <h3>Customizations</h3>
+    <canvas id="control-bg"></canvas>
+    <div class="controls-content">
+      <h3>Game Settings</h3>
       <div class="control-group">
-        <label for="map-shape">Map Shape:</label>
-        <select id="map-shape">
-          <option value="circle">Circle</option>
-          <option value="square">Square</option>
-          <option value="hexagon">Hexagon</option>
-          <option value="octagon">Octagon</option>
-        </select>
+        <label for="emoji-count">Number of Emojis:</label>
+        <input type="number" id="emoji-count" min="1" max="20" value="5">
       </div>
       <div class="control-group">
         <label for="emoji-speed">Emoji Speed:</label>
         <input type="range" id="emoji-speed" min="1" max="10" value="5">
       </div>
-      <div class="control-group">
-        <label for="emoji-count">Number of Emojis:</label>
-        <input type="number" id="emoji-count" min="1" max="20" value="3">
-      </div>
-      <button id="spawn-random">Spawn Random Emoji</button>
-      <button id="respawn-all">Respawn All Emojis</button>
+      <button id="spawn-btn">Spawn Random Emoji</button>
+      <button id="respawn-btn">Respawn All Emojis</button>
     </div>
   </div>
 
